# lilTomlParser

./: .gitignore  CMakeLists.txt  README.md  justfile
example/: ex01.cpp  test.toml
include/: config.hpp  enums.hpp  lexer.hpp  parser.hpp  types.hpp  util.hpp
src/: config.cpp  lexer.cpp  parser.cpp  util.cpp
tests/: CMakeLists.txt  testlexer.cpp  testparser.cpp  tests.hpp  testutils.cpp
